@startuml hu25

class ConsultationController {
  +getAll(): List<Consultation>
  +getOne(id: Long): Consultation
  +create(obj: ConsultationDTO): void
  +update(id: Long, obj: ConsultationDTO): void
  +delete(id: Long): void
}

class ConsultationService {
  +list(): List<Consultation>
  +getOne(id: Long): Consultation
  +save(obj: Consultation): Consultation
  +delete(id: Long): void
  +existsById(id: Long): boolean
}

class ConsultationRepository {
  +findByConsultation_Date(date: Date): List<Consultation>
  +findByState(state: String): List<Consultation>
}

interface JpaRepository {
  ~DynamycQueryAlgoritm
}

interface CRUDService{
  +list(): List<T>
  +getOne(id: ID): Optional<T>
  +save(obj: T): void
  +delete(id: ID): void
  +existsById(id: ID): boolean
}

class ConsultationDTO {
  -idConsultation: Long
  -consultationDate: Date
  -personId: Long
  -reason: String
  -details: String
  -state: String
  @lombok
}

class Consultation {
  -idConsultation: Long
  -consultationDate: Date
  -person: Person
  -reason: String
  -details: String
  -state: String
  @lombok
}

ConsultationController ..> ConsultationService : <<uses>>
ConsultationController --> ConsultationDTO : <<uses>>
ConsultationController ..> Consultation : <<creates>>
ConsultationController ..> ConsultationService: <<returns>>

ConsultationService --|> CRUDService
ConsultationService ..> ConsultationRepository : <<uses>>

ConsultationRepository --> ConsultationService : <<returns>>
ConsultationRepository --> Consultation : <<returns>>
ConsultationRepository --|> JpaRepository: <<implements>>

@enduml
